# aws-sam-docker-ai

./: Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt  samconfig.toml  template.yaml
.aws-sam/: build.toml
app/: lambda_function.py  main.py  requirements.txt
app/api/routes/: predictor.py
app/core/: config.py  events.py  setup.py
app/models/: prediction.py
app/services/: predict.py  utils.py
events/: event.json
